-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.6, 5.14.0
-
None
-
-
171bdc9f0e9a563b0d70643637d0b6a8e5661d17 (qt/qtwebengine/5.14)
Steps:
- Start minimal browser and load https://www.google.com
- Blink focuses the input field but doesn't notify about it because screen reader is not running
- Start screen reader
- Window has the accessibility focus
- Click on the input filed
- Blink doesn't update accessibility focus because the input field was already focused on the web page
Words in the input field is not read by the screen reader. Removing the focus (click outside of the input field) then clicking on the input field will update the accessibility focus and makes the screen reader work.
The screen reader queries the focus child of the window when start. Thus, if the view has the active focus the corresponding QAccessibleInterface::focusChild() call should return the focused accessible element on the web page. focusChild() is supposed to be fixed by https://bugreports.qt.io/browse/QTBUG-78284
By this fix the input field should be focused without clicking on it when the screen reader started and view has the active focus.
If the view does not have the active focus, the accessibility focus should be updated when the view gets it. QWidget::setFocus() does this for widget. Quick needs to be fixed.
Linux seems to be not affected by this because accessibility is always turned off or on by the QTWEBENGINE_ENABLE_LINUX_ACCESSIBILITY macro and AtSpiAdaptro doesn't call QAccessibleInterface::focusChild()
- depends on
-
QTBUG-78284 VoiceOver silent when navigating QtWebEngine webpage
-
- Closed
-
- relates to
-
QTBUG-82862 QtWebEngine confuses screen reader when regaining focus
-
- Closed
-
For Gerrit Dashboard: QTBUG-81539 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
281210,10 | Fix widget accessibility on macOS | 5.14 | qt/qtwebengine | Status: MERGED | +2 | 0 |
286743,7 | Fix quick accessibility on macOS | 5.14 | qt/qtwebengine | Status: MERGED | +2 | 0 |
287229,4 | Update accessibility focus on FocusIn events for Quick | 5.14 | qt/qtwebengine | Status: MERGED | +2 | 0 |