Update accessibility focus on FocusIn events for Quick

Without this, an already focused web element might not be read
when QQuickWebEngineView gets the active focus.
QWidget::setFocus() does this for Widget.

Fixes: QTBUG-81539
Change-Id: Iaa418c416871e580583ea05e50b223dea3501fd8
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>